--- a/base/templates/base/task.html
+++ b/base/templates/base/task.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Task</title>
 </head>
 <body>
 <h1>Task: {{task}}</h1>
+<a href="{% url 'tasks' %}">Go back</a>
+
+
 </body>
 </html>
