--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tasks</title>
 </head>
 <body>
 <h1>My To Do list</h1>
+<a href="{% url 'task-create' %}">Add Task</a>
 <table>
     <tr>
         <th>Item</th>
