added the ability to update values from list of todo

--- a/base/templates/base/task.html
+++ b/base/templates/base/task.html
@@ -5,7 +5,8 @@
     <title>Task</title>
 </head>
 <body>
-<h1>Task: {{task}}</h1>
+<h2><b>Task:</b> {{task.title}}</h2>
+<h3><b>Description:</b> {{task.description}}</h3>
 <a href="{% url 'tasks' %}">Go back</a>
 
 
