--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -5,6 +5,15 @@
     <title>Tasks</title>
 </head>
 <body>
+
+{% if request.user.is_authenticated %}
+<p>{{request.user}}</p>
+<a href="{% url 'logout' %}">Logout</a>
+{% else %}
+<a href="{% url 'login' %}">Login</a>
+{% endif %}
+
+<hr>
 <h1>My To Do list</h1>
 <a href="{% url 'task-create' %}">Add Task</a>
 <table>
