--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -14,7 +14,7 @@
 {% endif %}
 
 <hr>
-<h1>My To Do list</h1>
+<h1>My To Do list  {{color}}</h1>
 <a href="{% url 'task-create' %}">Add Task</a>
 <table>
     <tr>
