--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -16,6 +16,12 @@
 <hr>
 <h1>My To Do list  {{color}}</h1>
 <a href="{% url 'task-create' %}">Add Task</a>
+
+<form method="GET" action="">
+        <input type='text' name='search-area' placeholder="Search your task" value="{{search_input}}">
+        <input class="button" type="submit" value='Search'>
+</form>
+
 <table>
     <tr>
         <th>Item</th>
