--- a/base/templates/base/task.html
+++ b/base/templates/base/task.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Task</title>
-</head>
-<body>
+{% extends 'base/main.html' %}
+{% block content %}
 <h2><b>Task:</b> {{task.title}}</h2>
 <h3><b>Description:</b> {{task.description}}</h3>
 <a href="{% url 'tasks' %}">Go back</a>
 
 
-</body>
-</html>
+{% endblock content %}
