--- a/base/templates/base/task_confirm_delete.html
+++ b/base/templates/base/task_confirm_delete.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Delete</title>
-</head>
-<body>
+{% extends 'base/main.html' %}
+{% block content %}
 
-<a href="{% url 'tasks' %}">Go Back</a>
-<form method="post" action="">
+<div class="header-bar">
+    <a href="{% url 'tasks' %}">&#8592; Go Back</a>
+</div>
 
-    {% csrf_token %}
-    <p>Are your sure you  want to delete this task? "{{task}}</p>
-   <input type="submit" value="Delete"/>
+<div class="card-body">
+    <form method="POST">
+        {% csrf_token %}
+        <p>Are your sure you want to delete this task? <b>"{{task}}"</b> </p>
+        <input class="button" type="submit" value="Delete" />
+    </form>
+</div>
 
-</form>
 
-</body>
-</html>
+
+{% endblock content %}
